adjust to run either tech

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -4548,6 +4548,163 @@
     "if len(a) == 1:\n",
     "    print(True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "import yaml\n",
+    "\n",
+    "class Data:\n",
+    "    def __init__(self,file):\n",
+    "        self.df = pandas.read_csv(file,na_values=None)\n",
+    "    \n",
+    "    def get_sample_names(self):\n",
+    "        return list(self.df[\"sample_name\"])\n",
+    "    \n",
+    "    def get_sample_1(self):\n",
+    "        return list(self.df[\"sample_1\"])\n",
+    "    \n",
+    "    def get_sample_2(self):\n",
+    "        return list(self.df[\"sample_2\"])\n",
+    "\n",
+    "    def get_sample_type(self):\n",
+    "        names = self.get_sample_names()\n",
+    "        type = self.df['tech']\n",
+    "        type_dic = {}\n",
+    "        for index in range(len(names)):\n",
+    "            type_dic[names[index]] = 'medaka' if type[index] == 'ont' else 'snippy'\n",
+    "        return type_dic\n",
+    "\n",
+    "\n",
+    "    def get_dic(self):\n",
+    "        dic = {}\n",
+    "        names = self.get_sample_names()\n",
+    "        for name in names:\n",
+    "            dic[name] = {}\n",
+    "        \n",
+    "        for idx,s1 in enumerate(self.get_sample_1()):\n",
+    "            \n",
+    "            dic[names[idx]]['sample_1'] = s1 if type(s1) == type('string') else None\n",
+    "        \n",
+    "        for idx,s2 in enumerate(self.get_sample_2()):\n",
+    "            dic[names[idx]]['sample_2'] = s2 if type(s2) == type('string') else None\n",
+    "\n",
+    "        for idx,tech in enumerate(list(self.df['tech'])):\n",
+    "            dic[names[idx]]['tech'] = tech if type(tech) == type('string') else None\n",
+    "        \n",
+    "        return dic\n",
+    "\n",
+    "    def get_options(self):\n",
+    "        project_dic = self.get_dic()\n",
+    "\n",
+    "        single_illumina={}\n",
+    "        paired_illumina={}\n",
+    "        ont_samples={}\n",
+    "        for names in project_dic:\n",
+    "            if project_dic[names]['sample_1'] and  project_dic[names]['sample_2'] and project_dic[names]['tech'] == 'illumina':\n",
+    "                paired_illumina[names] = project_dic[names]\n",
+    "            elif project_dic[names]['sample_1'] and  not project_dic[names]['sample_2'] and project_dic[names]['tech'] == 'illumina':\n",
+    "                single_illumina[names] = project_dic[names]\n",
+    "            elif project_dic[names]['sample_1'] and not project_dic[names]['sample_2'] and project_dic[names]['tech'] == 'ont':\n",
+    "                ont_samples[names] = project_dic[names]\n",
+    "        return project_dic\n",
+    "    def is_single_end(self):\n",
+    "        if self.get_sample_2() == []:\n",
+    "            return True\n",
+    "        return False\n",
+    "    \n",
+    "    def is_unique_file(self):\n",
+    "        if len(self.get_sample_1()) == 1 and self.get_sample_2() == []: \n",
+    "            return True\n",
+    "        return False\n",
+    "\n",
+    "def read_yaml(file):\n",
+    "    with open(file) as file:\n",
+    "        return yaml.load(file, Loader=yaml.FullLoader)\n",
+    "\n",
+    "sample_data = Data(\"../config_user/sample_info_1.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['ERR10039720'])"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic = {'ERR10039720': {'sample_1': 'ERR10039720_1', 'sample_2': None, 'tech': 'illumina'}}\n",
+    "\n",
+    "dic.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MN908947.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Bio import SeqIO\n",
+    "\n",
+    "def get_id_version(genbank_file):\n",
+    "    \"\"\"\n",
+    "    The get_locus function takes a genbank file and returns the locus number of that record.\n",
+    "    If there is only one record in the genbank file, it will return the possible_name. If there are multiple records, \n",
+    "    it will return a list of all locus numbers.\n",
+    "    \n",
+    "    :param genbank_file: Open the genbank file, and then parse it using seqio\n",
+    "    :param possible_name: Determine if the file is a single genbank file or not\n",
+    "    :return: A list of locus numbers\n",
+    "    :doc-author: Trelent\n",
+    "    \"\"\"\n",
+    "    handle_gb = open(genbank_file)\n",
+    "    for record in SeqIO.parse(handle_gb, \"genbank\"):\n",
+    "         return record.id\n",
+    "print(get_id_version('/home/reusebio/tese/insaflu_snakemake/reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[ 0 ,   1 ,   2 ,   3 ,   4 ,   5 ,   6 ,   7 ]'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "locus = [x for x in range(8)]\n",
+    "a = \" \".join(str(locus))\n",
+    "a"
+   ]
   }
  ],
  "metadata": {
