accept user raw data

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -4551,9 +4551,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "({'SRR10885405': {'fastq1': 'SRR10885405_1', 'fastq2': 'SRR10885405_2', 'tech': 'illumina'}, 'SRR10885406': {'fastq1': 'SRR10885406_1', 'fastq2': 'SRR10885406_2', 'tech': 'illumina'}}, {}, {'ERR974981': {'fastq1': 'ERR974981', 'fastq2': None, 'tech': 'ont'}})\n",
+      "{'SRR10885405': {'fastq1': 'SRR10885405_1', 'fastq2': 'SRR10885405_2', 'tech': 'illumina'}, 'SRR10885406': {'fastq1': 'SRR10885406_1', 'fastq2': 'SRR10885406_2', 'tech': 'illumina'}} {} {'ERR974981': {'fastq1': 'ERR974981', 'fastq2': None, 'tech': 'ont'}}\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas\n",
     "import yaml\n",
@@ -4566,10 +4575,10 @@
     "        return list(self.df[\"sample_name\"])\n",
     "    \n",
     "    def get_sample_1(self):\n",
-    "        return list(self.df[\"sample_1\"])\n",
+    "        return list(self.df[\"fastq1\"])\n",
     "    \n",
     "    def get_sample_2(self):\n",
-    "        return list(self.df[\"sample_2\"])\n",
+    "        return list(self.df[\"fastq2\"])\n",
     "\n",
     "    def get_sample_type(self):\n",
     "        names = self.get_sample_names()\n",
@@ -4588,10 +4597,10 @@
     "        \n",
     "        for idx,s1 in enumerate(self.get_sample_1()):\n",
     "            \n",
-    "            dic[names[idx]]['sample_1'] = s1 if type(s1) == type('string') else None\n",
+    "            dic[names[idx]]['fastq1'] = s1 if type(s1) == type('string') else None\n",
     "        \n",
     "        for idx,s2 in enumerate(self.get_sample_2()):\n",
-    "            dic[names[idx]]['sample_2'] = s2 if type(s2) == type('string') else None\n",
+    "            dic[names[idx]]['fastq2'] = s2 if type(s2) == type('string') else None\n",
     "\n",
     "        for idx,tech in enumerate(list(self.df['tech'])):\n",
     "            dic[names[idx]]['tech'] = tech if type(tech) == type('string') else None\n",
@@ -4605,13 +4614,13 @@
     "        paired_illumina={}\n",
     "        ont_samples={}\n",
     "        for names in project_dic:\n",
-    "            if project_dic[names]['sample_1'] and  project_dic[names]['sample_2'] and project_dic[names]['tech'] == 'illumina':\n",
+    "            if project_dic[names]['fastq1'] and  project_dic[names]['fastq2'] and project_dic[names]['tech'] == 'illumina':\n",
     "                paired_illumina[names] = project_dic[names]\n",
-    "            elif project_dic[names]['sample_1'] and  not project_dic[names]['sample_2'] and project_dic[names]['tech'] == 'illumina':\n",
+    "            elif project_dic[names]['fastq1'] and  not project_dic[names]['fastq2'] and project_dic[names]['tech'] == 'illumina':\n",
     "                single_illumina[names] = project_dic[names]\n",
-    "            elif project_dic[names]['sample_1'] and not project_dic[names]['sample_2'] and project_dic[names]['tech'] == 'ont':\n",
+    "            elif project_dic[names]['fastq1'] and not project_dic[names]['fastq2'] and project_dic[names]['tech'] == 'ont':\n",
     "                ont_samples[names] = project_dic[names]\n",
-    "        return project_dic\n",
+    "        return paired_illumina,single_illumina,ont_samples\n",
     "    def is_single_end(self):\n",
     "        if self.get_sample_2() == []:\n",
     "            return True\n",
@@ -4626,7 +4635,13 @@
     "    with open(file) as file:\n",
     "        return yaml.load(file, Loader=yaml.FullLoader)\n",
     "\n",
-    "sample_data = Data(\"../config_user/sample_info_1.csv\")\n"
+    "sample_data = Data(\"../config_user/flu.csv\")\n",
+    "# sample_data = Data(\"./config_user/ont.csv\")\n",
+    "# sample_data = Data(\"./config_user/flu_ont.csv\")\n",
+    "print(sample_data.get_options())\n",
+    "paired_illumina,single_illumina,ont_samples=sample_data.get_options()\n",
+    "print(paired_illumina,single_illumina,ont_samples)\n",
+    "paired_illumina_keys = paired_illumina.keys() "
    ]
   },
   {
@@ -4704,6 +4719,65 @@
     "locus = [x for x in range(8)]\n",
     "a = \" \".join(str(locus))\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ILLUMINACLIP': None, 'HEADCROP': 70, 'CROP': 0, 'SLIDINGWINDOW': 20, 'LEADING': 3, 'TRAILING': 3, 'MINLEN': 35, 'QUALITY': 10, 'LENGTH': 50, 'TAILCROP': 70, 'MAXLENGTH': 0, 'mapqual': 20, 'mincov': 20, 'minfrac': 0.51, 'Medaka_model': 'r941_min_high_g360', 'mincov_medaka': 30, 'Min_prop_for_variant_evidence': 0.8, 'MASK_SITES': None, 'MASK_REGIONS': None, 'MASK_F_BEGINNING': None, 'MASK_F_END': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../config_user/parameters.yaml') as file:\n",
+    "    software_parameters = yaml.load(file, Loader=yaml.FullLoader)\n",
+    "\n",
+    "print(software_parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "software None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'software {None}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ILLUMINACLIP 10'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "software_parameters = {\"ILLUMINACLIP\":10}\n",
+    "trimmomatic_params = f'ILLUMINACLIP {software_parameters[\"ILLUMINACLIP\"]}' if software_parameters['ILLUMINACLIP'] != None else ''\n",
+    "trimmomatic_params"
    ]
   }
  ],
