[REMOVE] clean old code

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -4779,6 +4779,28 @@
     "trimmomatic_params = f'ILLUMINACLIP {software_parameters[\"ILLUMINACLIP\"]}' if software_parameters['ILLUMINACLIP'] != None else ''\n",
     "trimmomatic_params"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SARS_CoV_2']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import get_locus\n",
+    "\n",
+    "get_locus.get_locus('/home/reusebio/tese/insaflu_snakemake/reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gb')"
+   ]
   }
  ],
  "metadata": {
