approximate to insaflu

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -4801,6 +4801,199 @@
     "\n",
     "get_locus.get_locus('/home/reusebio/tese/insaflu_snakemake/reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gb')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'insaflu': {'gaps': 59, 'Ns': 61, 'match nucleotides': 29710, 'seq_len': 29903, 'ref_len': 29903}}\n",
+      "{'snakemake': {'gaps': 59, 'Ns': 69, 'match nucleotides': 29702, 'seq_len': 29903, 'ref_len': 29903}}\n",
+      "{'insaflu': {'gaps': 0, 'Ns': 505, 'match nucleotides': 29389, 'seq_len': 29903, 'ref_len': 29903}}\n",
+      "{'snakemake': {'gaps': 0, 'Ns': 510, 'match nucleotides': 15936, 'seq_len': 29904, 'ref_len': 29903}}\n",
+      "{'insaflu': {'gaps': 59, 'Ns': 476, 'match nucleotides': 29299, 'seq_len': 29903, 'ref_len': 29903}}\n",
+      "{'snakemake': {'gaps': 13, 'Ns': 2841, 'match nucleotides': 27008, 'seq_len': 29903, 'ref_len': 29903}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Sequence:\n",
+    "    def __init__(self, sequence, reference) -> None:\n",
+    "        self.reference = str(reference)\n",
+    "        self.sequence = str(sequence) \n",
+    "        self.ref_len = len(self.reference)\n",
+    "        self.seq_len = len(self.sequence)\n",
+    "    def __str__(self) -> str:\n",
+    "        return self.sequence\n",
+    "    def get_number_gaps(self):\n",
+    "        count_gaps = 0\n",
+    "        for entry in self.sequence:\n",
+    "            if entry == '-':\n",
+    "                count_gaps += 1\n",
+    "        return count_gaps\n",
+    "    def get_number_Ns(self):\n",
+    "        count_gaps = 0\n",
+    "        for entry in self.sequence:\n",
+    "            if entry == 'N':\n",
+    "                count_gaps += 1\n",
+    "        return count_gaps\n",
+    "    def get_match_nucleotides(self):\n",
+    "        max_length = len(self.reference) if len(self.reference) < len(self.sequence) else len(self.sequence) \n",
+    "        num_equals = 0\n",
+    "        for nucleotide_index in range(max_length):\n",
+    "            if self.sequence != '-' and self.reference[nucleotide_index] == self.sequence[nucleotide_index]:\n",
+    "                num_equals += 1\n",
+    "        return num_equals\n",
+    "\n",
+    "\n",
+    "from Bio import SeqIO\n",
+    "\n",
+    "# genbank_file = \"/home/reusebio/tese/insaflu_snakemake/projects/INSAFLU_testing/sample_ERR10039718/snps.consensus.fa\"\n",
+    "# handle_gb = open(genbank_file)\n",
+    "# for record in SeqIO.parse(handle_gb, \"fasta\"):\n",
+    "#     sequence = Sequence(record.seq)\n",
+    "#     print(record.id,'gaps: ',sequence.get_number_gaps())\n",
+    "#     print(record.id,'Ns: ',sequence.get_number_Ns())\n",
+    "\n",
+    "# genbank_file = \"/home/reusebio/tese/insaflu_snakemake/projects/INSAFLU_testing/sample_ERR10039723/snps.consensus.fa\"\n",
+    "# handle_gb = open(genbank_file)\n",
+    "# for record in SeqIO.parse(handle_gb, \"fasta\"):\n",
+    "#     sequence = Sequence(record.seq)\n",
+    "#     print(record.id,'gaps: ',sequence.get_number_gaps())\n",
+    "#     print(record.id,'Ns: ',sequence.get_number_Ns())\n",
+    "\n",
+    "# genbank_file = \"/home/reusebio/tese/insaflu_snakemake/projects/INSAFLU_testing/sample_covidONT/consensus_aligned_SARS_CoV_2.fasta\"\n",
+    "# handle_gb = open(genbank_file)\n",
+    "# for record in SeqIO.parse(handle_gb, \"fasta\"):\n",
+    "#     sequence = Sequence(record.seq)\n",
+    "#     print(record.id,'gaps: ',sequence.get_number_gaps())\n",
+    "#     print(record.id,'Ns: ',sequence.get_number_Ns())\n",
+    "reference = \"/home/reusebio/tese/insaflu_snakemake/reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta\"\n",
+    "reference = SeqIO.read(reference, \"fasta\").seq\n",
+    "\n",
+    "\n",
+    "genbank_file = \"/home/reusebio/tese/insaflu_snakemake/test_consensus/testing_insaflu_covid/AllConsensus.fasta\"\n",
+    "handle_gb = open(genbank_file)\n",
+    "dic= {}\n",
+    "for record in SeqIO.parse(handle_gb, \"fasta\"):\n",
+    "    sequence = Sequence(record.seq, reference)\n",
+    "    dic[record.id[:record.id.index('_')]] = [{\n",
+    "        'insaflu':{\n",
+    "            'gaps' : sequence.get_number_gaps(),\n",
+    "            'Ns' : sequence.get_number_Ns(),\n",
+    "            'match nucleotides': sequence.get_match_nucleotides(),\n",
+    "            'seq_len': sequence.seq_len,\n",
+    "            'ref_len': sequence.ref_len\n",
+    "        }\n",
+    "    }]\n",
+    "    # print(record.id[:record.id.index('_')],'gaps: ',sequence.get_number_gaps())\n",
+    "    # print(record.id[:record.id.index('_')],'Ns: ',sequence.get_number_Ns())\n",
+    "    # print(dic)\n",
+    "\n",
+    "genbank_file = \"/home/reusebio/tese/insaflu_snakemake/projects/INSAFLU_testing/main_result/AllConsensus_no_ref.fasta\"\n",
+    "handle_gb = open(genbank_file)\n",
+    "for record in SeqIO.parse(handle_gb, \"fasta\"):\n",
+    "    sequence = Sequence(record.seq,reference)\n",
+    "    dic[record.id[:record.id.index('_')]].append(\n",
+    "        {'snakemake':{\n",
+    "            'gaps' : sequence.get_number_gaps(),\n",
+    "            'Ns' : sequence.get_number_Ns(),\n",
+    "            'match nucleotides': sequence.get_match_nucleotides(),\n",
+    "            'seq_len': sequence.seq_len,\n",
+    "            'ref_len': sequence.ref_len\n",
+    "        }}\n",
+    "    )\n",
+    "    # print(dic)\n",
+    "\n",
+    "for i in dic:\n",
+    "    for x in dic[i]:\n",
+    "        print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SRR10885405__1 gaps:  0\n",
+      "SRR10885405__2 gaps:  0\n",
+      "SRR10885405__3 gaps:  0\n",
+      "SRR10885405__4 gaps:  0\n",
+      "SRR10885405__5 gaps:  0\n",
+      "SRR10885405__6 gaps:  0\n",
+      "SRR10885405__7 gaps:  0\n",
+      "SRR10885405__8 gaps:  0\n",
+      "SRR10885406__1 gaps:  0\n",
+      "SRR10885406__2 gaps:  0\n",
+      "SRR10885406__3 gaps:  0\n",
+      "SRR10885406__4 gaps:  0\n",
+      "SRR10885406__5 gaps:  0\n",
+      "SRR10885406__6 gaps:  0\n",
+      "SRR10885406__7 gaps:  1\n",
+      "SRR10885406__8 gaps:  0\n",
+      "SRR10885405__1 gaps:  0\n",
+      "SRR10885405__2 gaps:  0\n",
+      "SRR10885405__3 gaps:  0\n",
+      "SRR10885405__4 gaps:  0\n",
+      "SRR10885405__5 gaps:  0\n",
+      "SRR10885405__6 gaps:  0\n",
+      "SRR10885405__7 gaps:  0\n",
+      "SRR10885405__8 gaps:  0\n",
+      "SRR10885406__1 gaps:  0\n",
+      "SRR10885406__2 gaps:  0\n",
+      "SRR10885406__3 gaps:  1\n",
+      "SRR10885406__4 gaps:  0\n",
+      "SRR10885406__5 gaps:  0\n",
+      "SRR10885406__6 gaps:  0\n",
+      "SRR10885406__7 gaps:  0\n",
+      "SRR10885406__8 gaps:  0\n",
+      "ERR974981__1 gaps:  0\n",
+      "ERR974981__2 gaps:  0\n",
+      "ERR974981__3 gaps:  0\n",
+      "ERR974981__4 gaps:  0\n",
+      "ERR974981__5 gaps:  0\n",
+      "ERR974981__6 gaps:  0\n",
+      "ERR974981__7 gaps:  0\n",
+      "ERR974981__8 gaps:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Bio import SeqIO\n",
+    "genbank_file = \"/home/reusebio/tese/insaflu_snakemake/test_consensus/testing_insaflu_flu/AllConsensus.fasta\"\n",
+    "handle_gb = open(genbank_file)\n",
+    "for record in SeqIO.parse(handle_gb, \"fasta\"):\n",
+    "    sequence = Sequence(record.seq)\n",
+    "    print(record.id,'gaps: ',sequence.get_number_gaps())\n",
+    "\n",
+    "genbank_file = \"/home/reusebio/tese/insaflu_snakemake/projects/flu_testing_BVictoria/main_result/AllConsensus_no_ref.fasta\"\n",
+    "handle_gb = open(genbank_file)\n",
+    "for record in SeqIO.parse(handle_gb, \"fasta\"):\n",
+    "    sequence = Sequence(record.seq)\n",
+    "    print(record.id,'gaps: ',sequence.get_number_gaps())"
+   ]
   }
  ],
  "metadata": {
