--- a/test.ipynb
+++ b/test.ipynb
@@ -2,34 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length SnakeMake 175\n",
+      "Length SnakeMake 177\n",
       "Length INSaFLU 175\n",
-      "Matches  175\n"
+      "Matches  145\n"
      ]
     }
    ],
    "source": [
     "import csv\n",
+    "import sys\n",
     "\n",
-    "from numpy import true_divide\n",
-    "\n",
-    "snake_bef = \"/home/reusebio/insaflu_snakemake/projects/INSAFLU_testing/main_result/\"\n",
-    "insa_bef = \"/home/reusebio/insaflu_snakemake/\"\n",
-    "\n",
-    "file_name = \"validated_minor_iSNVs_inc_indels\"\n",
-    "\n",
-    "ext_csv = \".csv\"\n",
-    "ext_tsv = \".tsv\"\n",
-    "\n",
-    "snakemake_file = \"/home/reusebio/insaflu_snakemake/projects/INSAFLU_testing/main_result/\" + file_name + ext_csv\n",
-    "insaflu_file = \"/home/reusebio/insaflu_snakemake/\" + file_name + ext_csv\n",
     "\n",
     "def get_clean_vcf_snake(file_name, remove_dot):\n",
     "    final_list = []\n",
@@ -64,8 +53,12 @@
     "        final_list.append(f\"{row[0]}_{row[1]}_{row[2]}_{row[4]}_{row[5]}\")\n",
     "    return final_list\n",
     "\n",
-    "snakemake = get_clean_vcf_snake(snakemake_file, False)\n",
-    "insaflu = get_clean_csv_vcf_insaflu(insaflu_file)\n",
+    "snakemake_file = sys.argv[1]\n",
+    "insaflu_file = sys.argv[2]\n",
+    "remove = sys.argv[3]\n",
+    "\n",
+    "snakemake = get_clean_vcf_snake(snakemake_file, False) if remove == 'false' else get_clean_vcf_snake(snakemake_file, True)\n",
+    "insaflu = get_clean_csv_vcf_insaflu(insaflu_file) if insaflu_file[-3:] == 'csv' else get_clean_tsv_vcf_insaflu(insaflu_file) \n",
     "\n",
     "count = 0\n",
     "for row in snakemake:\n",
@@ -76,6 +69,27 @@
     "print('Length SnakeMake', len(snakemake))\n",
     "print('Length INSaFLU', len(insaflu))\n",
     "print('Matches ', count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'csv'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insaflu_file = \"assfsfsdf_sfdsdfsf.csv\"\n",
+    "insaflu_file[-3:]"
    ]
   }
  ],
