--- a/test.ipynb
+++ b/test.ipynb
@@ -91,6 +91,17 @@
     "insaflu_file = \"assfsfsdf_sfdsdfsf.csv\"\n",
     "insaflu_file[-3:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "for i in range(5):\n",
+    "    random.randint(0,2)"
+   ]
   }
  ],
  "metadata": {
