--- a/test.ipynb
+++ b/test.ipynb
@@ -102,6 +102,70 @@
     "for i in range(5):\n",
     "    random.randint(0,2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Demo_Sample_101.fastq.gz\n",
+      "Demo_Sample_102.fastq.gz\n",
+      "Demo_Sample_103.fastq.gz\n",
+      "Demo_Sample_069.fastq.gz\n",
+      "Demo_Sample_070.fastq.gz\n",
+      "Demo_Sample_072.fastq.gz\n",
+      "Demo_Sample_073.fastq.gz\n",
+      "Demo_Sample_075.fastq.gz\n",
+      "Demo_Sample_076.fastq.gz\n",
+      "Demo_Sample_077.fastq.gz\n",
+      "Demo_Sample_078.fastq.gz\n",
+      "Demo_Sample_080.fastq.gz\n",
+      "Demo_Sample_081.fastq.gz\n",
+      "Demo_Sample_082.fastq.gz\n",
+      "Demo_Sample_083.fastq.gz\n",
+      "Demo_Sample_085.fastq.gz\n",
+      "Demo_Sample_087.fastq.gz\n",
+      "Demo_Sample_089.fastq.gz\n",
+      "Demo_Sample_091.fastq.gz\n",
+      "Demo_Sample_093.fastq.gz\n",
+      "Demo_Sample_094.fastq.gz\n",
+      "Demo_Sample_096.fastq.gz\n",
+      "Demo_Sample_100.fastq.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "files = [\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_101.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_102.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_103.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_069.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_070.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_072.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_073.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_075.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_076.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_077.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_078.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_080.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_081.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_082.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_083.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_085.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_087.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_089.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_091.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_093.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_094.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_096.fastq.gz\",\n",
+    "\"sars_ont_insaflu-20221102T101727Z-001\\sars_ont_insaflu\\Demo_Sample_100.fastq.gz\"]\n",
+    "\n",
+    "for row in files:\n",
+    "    print(row[-24:-9]+'.fastq.gz')"
+   ]
   }
  ],
  "metadata": {
